--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
           </div>
     </section>
     <!-- Recipe section -->
-    <div class="container">
+    <h1 class="text-center text-white mt-5" id="error"></h1>
+    <div class="container hidden">
         <h2 class="text-white mt-3 text-center">Search Results:</h2>
-        <div class="row mt-5">
-            <div class="col-md-4">
+        <div class="row mt-5" id="recipes">
+
+          <!-- data show here  -->
+            <!-- <div class="col-md-4">
                 <div class="card bg-dark border-4" style="width: 18rem;">
                     <img src="./images/rcp.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
@@ -41,27 +44,7 @@
                       <p class="card-text text-white">Calories:120</p>
                       <a href="#" class="btn btn-danger text-white">View recipe</a>
                     </div>
-                  </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card bg-dark border-4" style="width: 18rem;">
-                    <img src="./images/rcp.jpg" class="card-img-top" alt="...">
-                    <div class="card-body text-center">
-                      <h5 class="card-title text-white">This is a recipe</h5>
-                      <p class="card-text text-white">Calories:120</p>
-                      <a href="#" class="btn btn-danger text-white">View recipe</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card bg-dark border-4" style="width: 18rem;">
-                    <img src="./images/rcp.jpg" class="card-img-top" alt="...">
-                    <div class="card-body text-center">
-                      <h5 class="card-title text-white">This is a recipe</h5>
-                      <p class="card-text text-white">Calories:120</p>
-                      <a href="#" class="btn btn-danger text-white">View recipe</a>
-                    </div>
-                  </div>
+                  </div> -->
             </div>
         </div>
     </div>
